--- a/Client/Pages/StreakProgressPage.razor
+++ b/Client/Pages/StreakProgressPage.razor
@@ -18,8 +18,8 @@
     </div>
 </div>
 <div class="wrapperContent">
-    <div class="content">
-        <div style="font-weight:700; font-size:1rem;">ההתקדמות שלי</div>
+    <div class="textContent">
+        <div style="font-weight:700; font-size:1rem;">ההתקדמות שלי | </div>
         <div style="font-weight:400">כל הצעדים בדרך לחסכון</div>
         <div id="transAmountForNextRank">
         </div>
@@ -40,13 +40,14 @@
     }
 
     <div class="wrapperContent">
+        
         <div class="content">
             <div id="ranks">
                 @for (int i = 0; i < streakStatusOpt.Count; i++)
                 {
                     if (i <= currentUserStreakIndex)
                     {
-                        <div class="outerRank" id="@i">
+                        <div class="outerRank" id="rank_@i">
                             <div class="allRank">
                                 <img style="width:25%" src="@rankPicSrc[i]"><img />
                                 <div class="rankTxt">
@@ -59,12 +60,15 @@
                     else
                     {
                         @*add css that will make this look locked- for now I painted the text purple so we'll see the difference*@
-                        <div class="outerRank" id="@i">
-                            <div class="allRank">
-                                <img style="width:25%" src="@rankPicSrc[i]"><img />
-                                <div class="rankTxt">
-                                    <h3 class="rankInnerText">@streakStatusOpt[i]</h3>
-                                    <p class="rankInnerText2">נפתח אחרי <b>@weekAmountForRank[i]</b></p>
+                        <div class="outerRank" id="rank_@i">
+                            <div class="lockRank">
+                                <img class="lockImg" src="../css/images/lock.svg" />
+                                <div class="allRankLock">
+                                    <img style="width:25%" src="@rankPicSrc[i]" alt="Rank Image">
+                                    <div class="rankTxt">
+                                        <h3 class="rankInnerText">@streakStatusOpt[i]</h3>
+                                        <p class="rankInnerText2">נפתח אחרי <b>@weekAmountForRank[i]</b></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -74,14 +78,15 @@
             </div>
         </div>
     </div>
+    <div id="@hideNav" class="bottom-nav" @ref="navBar">
+        <button class="navBtn">מבט לעבר<img src="../css/images/past.svg" /></button>
+        <div class="NavLines"> </div>
+        <button class="navBtn" style="font-weight:600">מבט להווה<img src="../css/images/present.svg" /></button>
+        <div class="NavLines"> </div>
+        <button class="navBtn">מבט לעתיד<img src="../css/images/future.svg" /></button>
+    </div>
 </div>
-<div id="@hideNav" class="bottom-nav" @ref="navBar">
-    <button class="navBtn">מבט לעבר<img src="../css/images/past.svg" /></button>
-    <div class="NavLines"> </div>
-    <button class="navBtn" style="font-weight:600">מבט להווה<img src="../css/images/present.svg" /></button>
-    <div class="NavLines"> </div>
-    <button class="navBtn">מבט לעתיד<img src="../css/images/future.svg" /></button>
-</div>
+
 @code {
     [Parameter]
     public int userID { get; set; }
