--- a/Client/Pages/StreakProgressPage.razor.css
+++ b/Client/Pages/StreakProgressPage.razor.css
@@ -56,11 +56,12 @@
     border-radius: 0.3rem;
     background: #F9F9F9;
     display: flex;
-    width: 50%;
+    width: 78%;
     align-items: center;
     justify-content: space-around;
-    padding: 0.5vh 0;
+    padding: 0.5vh;
 }
+
 
 
 .content {
@@ -70,7 +71,11 @@
     padding: 0;
     width: 100%;
     display: flex;
+    /* width: 80%; */
     justify-content: center;
+    background-image: url('css/images/welldone-bg.svg');
+    background-repeat: no-repeat;
+    height:95%;
 }
 
 .wrapperContent {
@@ -78,7 +83,9 @@
     align-items: center;
     align-content: flex-end;
     flex-direction: column;
-    height: 90%;
+    height: 100%;
+    background-image: url(css/images/welldone-bg.svg);
+    background-repeat: no-repeat;
 }
 
 .topNextRank {
@@ -101,7 +108,7 @@
     /* row-gap: 2vh; */
     justify-content: space-evenly;
     margin-top: 0;
-    width: 100%;
+    width: 80%;
 }
 
 .topRanksAndBanner {
@@ -116,10 +123,10 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
 }
 
-}
+
 
 .backbtn {
     background: none;
@@ -198,4 +205,105 @@
     align-content: center;
     justify-content: center;
     row-gap: 0.4vh;
+}
+
+
+#rank_1 {
+    /* display: flex; */
+    width: 100%;
+    justify-content: flex-start;
+    margin: 0 4vw 0 0;
+    height: 8vh;
+}
+
+#rank_2 {
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    height: 8vh;
+}
+
+#rank_3 {
+    display: flex;
+    width: 100%;
+    height: 8vh;
+}
+
+#rank_4 {
+    display: flex;
+    justify-content: flex-end;
+    height: 8vh;
+}
+
+#rank_5 {
+    margin: 0 10vw 0 0;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0 10vw 0 0;
+    height: 8vh;
+}
+
+#rank_6 {
+    display: flex;
+    /* width: 80%; */
+    justify-content: flex-start;
+    height: 8vh;
+}
+
+.textContent {
+    height: 90%;
+    /* width: 79%; */
+    /* margin-bottom: 1vh; */
+    padding: 0;
+    width: 100%;
+    display: flex;
+    /* width: 80%; */
+    justify-content: center;
+    background-image: url('css/images/welldone-bg.svg');
+    background-repeat: no-repeat;
+    height: 95%;
+    column-gap: 1vh;
+}
+
+.lockRank {
+    position: relative; /* Ensures the pseudo-element positions correctly */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:78%;
+}
+
+    .lockRank::after {
+        content: ''; /* Required for pseudo-elements */
+        position: absolute; /* Position over the lockRank content */
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.55); /* Semi-transparent black */
+        pointer-events: none; /* Allows clicks to pass through to underlying elements */
+        border-radius: 0.3rem;
+        padding: 0.5vh;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+
+
+.allRankLock {
+    border-radius: 0.3rem;
+    background: #F9F9F9;
+    display: flex;
+    width: 100%;
+    height:100%;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0.5vh;
+}
+
+.lockImg {
+    z-index: 1;
+    position: absolute;
 }
